--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,8 @@
     <title>GenAI Chat Assistant</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="content">
+      <div id="root"></div>
+    </div>
   </body>
 </html>
